<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AI Video Maker</string>
    <string name="app_subtitle">Text &amp; Image to Video</string>
    <string name="hint_prompt">Enter your video description here in English or Arabic...</string>
    <string name="btn_generate">Generate Video</string>
    <string name="btn_select_image">Select Image</string>
    <string name="btn_save">Save to Studio</string>
    <string name="btn_share">Share</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="generating">Generating video...</string>
    <string name="done">Done!</string>
    <string name="error">An error occurred, please try again</string>
    <string name="no_image">No image selected</string>
    <string name="image_selected">Image selected</string>
    <string name="saved">Saved to Studio</string>
    <string name="permission_denied">Permission denied</string>
    <string name="prompt_label">Description (Prompt)</string>
    <string name="image_label">Image (Optional)</string>
    <string name="orientation_label">Orientation</string>
    <string name="enter_prompt">Please enter a description or select an image</string>
    <string name="generating_image">Generating image %1$d of %2$d...</string>
    <string name="merging_video">Merging images into video...</string>
    <string name="processing">Processing: %1$d%%</string>
    <string name="share_video">Share Video</string>
</resources>
